# legal-terminal

./: .dockerignore  .gitignore  Dockerfile  FEATURES.md  LICENSE  README.md  RELEASE.md  railway.toml
docs/: DEPLOY.md  OPERATIONS.md
fixtures/: audit_log.json  automations_seed.json  brief_outlines.json  cases.json  clause_alternatives.json  contracts.json  document_profiles.json  inbox_seed.json  jobs.json  negotiation_guides.json  panel_meta.json  statutes.json  tool_catalog.json  trigger_categories.json  trigger_rules_seed.json  workflows.json
scripts/: sync-fixtures.mjs
tui/: pyproject.toml
tui/legal_term/: __init__.py  __main__.py  app.py  client.py  live_client.py  theme.tcss
tui/legal_term/screens/: audt.py  cite.py  ctrx.py  jobs.py  prec.py  wkfl.py
tui/legal_term/widgets/: audt.py  cite.py  ctrx.py  jobs.py  prec.py  wkfl.py
tui/tests/: test_app_headless.py  test_imports.py  test_mock_client.py
webterm/: .dockerignore  .env.local.example  Dockerfile  index.html  package-lock.json  package.json  railway.toml  vite.config.ts
webterm/src/: App.tsx  fixtureMeta.ts  fixtures.ts  index.css
webterm/src/components/: ClientModeToggle.tsx  CommandLine.tsx  CommandPalette.tsx  FileUploadZone.tsx  PanelChrome.tsx  PreReleaseOverlay.tsx  ProductSurface.tsx  Sidebar.tsx  StatusBar.tsx  Workspace.tsx
webterm/src/hooks/: useViewport.ts
webterm/src/mcp/: client.ts  index.ts  liveClient.ts  mockClient.test.ts  mockClient.ts  types.ts
webterm/src/panels/: AudtPanel.tsx  AutmPanel.tsx  BrfPanel.tsx  ChatPanel.tsx  CitePanel.tsx  ConfPanel.tsx  (+11 more)
(+9 files in other folders)
