[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "legal-term"
version = "0.1.0"
description = "Bloomberg-style legal terminal TUI — legal-mcp MVP"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.84",
    "rich>=13",
]

[project.scripts]
legal-term = "legal_term.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
